--- a/.github/workflows/hetzner.yml
+++ b/.github/workflows/hetzner.yml
@@ -1,53 +1,23 @@
-name: Deploy to Server
+name: Deploy to Hetzner
 
 on:
-
   push:
-
     branches: [ master ]
+  # Optional: Enable manual triggering
+  workflow_dispatch:
 
 jobs:
-
   deploy:
-
     runs-on: ubuntu-latest
 
     steps:
-
-      - uses: actions/checkout@v3
-
-
-
-      - name: Set up SSH
-
-        uses: webfactory/ssh-agent@v0.8.0
-
+      - name: Deploy to Hetzner
+        uses: appleboy/ssh-action@master
         with:
-
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-
-
-
-      - name: Add host to known_hosts
-
-        run: |
-
-          mkdir -p ~/.ssh
-
-          ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
-
-      
-
-      - name: Deploy with SSH
-
-        run: |
-
-          ssh ${{ secrets.SSH_USER || 'ubuntu' }}@${{ secrets.SSH_HOST }} '
-
-            cd ~/docker-flask-example &&
-
-            git pull &&
-
-            echo "Deployment complete"
-
-          '
+          host: ${{ secrets.HETZNER_HOST }}
+          username: ${{ secrets.HETZNER_USERNAME }}
+          key: ${{ secrets.HETZNER_SSH_KEY }}
+          port: ${{ secrets.HETZNER_PORT }}
+          script: |
+            cd ~/docker-flask-example
+            git pull
